Update the comment to highlight the evaluation order.

--- a/sk2.html
+++ b/sk2.html
@@ -27,7 +27,7 @@ HEADING1X&rarr;
 PARAERR&rarr;
 		<sup>1</sup>STE PARAERRX
 		PROD&equiv;DELTA1&times;DELTA2+1/DIST=TS&rarr;BADOV
-		[what's the point of 1&times;DELTA2?]
+		[Note that DELTA1+1&times;DELTA2 is evaluated as (DELTA1+1)&times;DELTA2, see chapter 6-2.7 in the HandbookNov63]
 		PROD&equiv;DELTA1+1&times;DELTA2/DIST&rarr;BADOV
 PARAERRX&rarr;
 		JPQ #
