More pages, mostly symex/equalities (not ttranscribed).

--- a/sk2.html
+++ b/sk2.html
@@ -3102,5 +3102,53 @@ LAST&rarr;		ZZLAST
 [Handwritten: "PEN 11 AUG"]
 [Page header: "HHL LYUO 001"]
 
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=80 doc_page=230 type=symex]
+[Page header: "HHL LYUO 002"]
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=81 doc_page=231 type=symex]
+[Page header: "HHL LYUO 003"]
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=82 doc_page=232 type=equalities]
+[Page header: "HHL LYUO 004"]
+[Looks like equalities pages contain quite a lot of comments, may be useful]
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=83 doc_page=233 type=equalities]
+[Page header: "HHL LYUO 005"]
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=84 doc_page=234 type=equalities]
+[Page header: "HHL LYUO 006"]
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=85 doc_page=235 type=equalities]
+[Page header: "HHL LYUO 007"]
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=86 doc_page=236 type=equalities]
+[Page header: "HHL LYUO 010"]
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=86 doc_page=236 type=macros]
+[Page header: "HHL LYUO 011"]
+
+&#9755;&#9755;DEF EXAMINE|&alpha;&rarr;B
+<sup>1</sup>hIOS<sub>&alpha;</sub>0
+STE B
+&#9755;&#9755;EMD
+
+[Useful comments in this macro]
+&#9755;&#9755;DEF NORMALIZE|P&rarr;C/S&times;F=R&rarr;Q
+LDA P		**POINT P AT
+SUB C		**CENTER C TO BE
+SAB {-(F),}	**NORMALIZED TO 2F&times;S [F appears to be superscripted in this comment?]
+hJOV Q		**AND IF OUT, GO TO
+DIV S		**Q, LEAVE RESULT
+hJOV Q-(S)+(S)	**IN R
+STA R
+&#9755;&#9755;EMD
 
 </code></pre></body></html>
