--- a/sk2.html
+++ b/sk2.html
@@ -3132,7 +3132,7 @@ LAST&rarr;		ZZLAST
 [Page header: "HHL LYUO 010"]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=86 doc_page=236 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=87 doc_page=237 type=macros]
 [Page header: "HHL LYUO 011"]
 
 &#9755;&#9755;DEF EXAMINE|&alpha;&rarr;B
@@ -3150,5 +3150,167 @@ DIV S		**Q, LEAVE RESULT
 hJOV Q-(S)+(S)	**IN R
 STA R
 &#9755;&#9755;EMD
+
+&#9755;&#9755;DEF MOVE|A&rarr;B
+hLDE A
+STE B
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF HDIF|P,Q&rarr;R
+LDA P
+SUB Q
+SCA {-1,-1,,-1,-1}+((Q)^(770,))
+STA R
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF JZA|P
+JPA #+3
+JNA #+2
+JPQ P
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF SCNORM|P&rarr;Q=R&rarr;S
+T1=Q
+NORMALIZE|P&rarr;SCCEN+T1/SCSZ=R&rarr;S
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF DIFF&equiv;P&rarr;Q=R&rarr;S
+LDA P
+SUB Q
+hJOV S
+STA R
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF FABVAL&equiv;P&rarr;Q
+LDA P
+JPA #+2
+COM A
+STA Q
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=88 doc_page=238 type=macros]
+[Page header: "HHL LYUO 012"]
+
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF PYTH1&equiv;P&rarr;Q,R&rarr;S=T&rarr;U
+LDA R
+SUB S
+hJOV U+(S)-(S)
+STA B+(R)-(R)
+LDA P
+SUB Q
+hJOV U+(Q)-(Q)
+hJPQ PYTHAGORIAN
+hJOV U
+STA T
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF PYTH&equiv;P&rarr;Q=T&rarr;U
+PYTH1&equiv;P&rarr;Q,P+1&rarr;Q+1=T&rarr;U
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF DIREC1&equiv;P&rarr;Q,R&rarr;S=T&rarr;U
+LDA R
+SUB S
+hJOV U+(S)-(S)
+STA B+(R)-(R)
+LDA P
+SUB Q
+hJOV U+(Q)-(Q)
+hJPQ CACT
+STA T
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF DIREC&equiv;P&rarr;Q=T&rarr;U
+DIREC1&equiv;P&rarr;Q,P+1&rarr;Q+1=T&rarr;U
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF HSUM&equiv;P,Q&rarr;R
+LDA P
+ADD Q
+[Differently from previous version (doc_page 167, for example), this has + instead of ^ on the following line, typo?]
+SCA {-1,-1,,-1,-1}+((Q)+(770,))
+STA R
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF NPOL&equiv;P&rarr;L=S
+<sup>2</sup>DPX<sub>P</sub>A
+<sup>1</sup>DPX<sub>L</sub>A
+hJPQ NPOLR
+STA S
+STB S+1
+&#9755;&#9755;EMD
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=89 doc_page=239 type=macros]
+[Page header: "HHL LYUO 013"]
+
+&#9755;&#9755;DEF SUMM&equiv;P&rarr;Q=R&rarr;S
+LDA P
+ADD Q
+hJOV S
+STA R
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF PROD&equiv;A&times;B/C=D&rarr;E
+LDA A
+MUL B
+DIV C
+hJOV E
+STA D
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF LDAE&equiv;A,B,C,D
+LDA A
+LDB A+B
+LDC A+C
+LDD A+D
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF STAE&equiv;A,B,C,D
+STA A
+STB A+B
+STC A+C
+STA A+D
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF CLCROSS&equiv;C&rarr;L=R&rarr;S,T
+DPX<sub>L</sub>A
+<sup>2</sup>DPX<sub>C</sub>A
+hLDE S		**TO GET S in Q
+hJPQ INTOCL
+JPQ T		**ONLY ONE INTERSECTION
+STA R
+STB R+1
+&#9755;&#9755;EMD
+
+&#9755;&#9755;DEF TWINNORM&equiv;P&rarr;Q=R,S
+LDA P
+SUB Q
+NOA {0}
+STA R
+STD S
+COM S
+LDA P+1
+SUB Q+1
+NOA S
+SKN<sub>4</sub><sub>.</sub><sub>9</sub>D
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=90 doc_page=240 type=macros]
+[Page header: "HHL LYUO 013"]
+
+JPQ #+3
+SCA D
+JPQ #+?
+EXA R
+COM D
+SCA D
+EXA R
+STA S
+&#9755;&#9755;EMD
+
+
 
 </code></pre></body></html>
